==> wolfSSL/Microchip-wolfboot/wolfboot/hal/cc26x2.c <==
/* cc26x2.c
 *
 * Copyright (C) 2014-2026 wolfSSL Inc.  All rights reserved.
 *
 * This file is part of wolfBoot.
 *
 * Contact licensing@wolfssl.com with any questions or comments.
 *
 * https://www.wolfssl.com
 */

#include <stdint.h>

#include "oscillators.h"
#include "ti-lib.h"

#include "target.h" /* For WOLFBOOT_SECTOR_SIZE */
#include "image.h"
extern void clock_init(void);

char uart_read(void)
{
    return (char)UARTCharGet(UART0_BASE);
}

int uart_read_nonblock(char *c)
{
    int ret = UARTCharGetNonBlocking(UART0_BASE);
    if (ret == -1)
        return 0;
    *c = (char)ret;
    return 1;
}


int RAMFUNCTION hal_flash_write(uint32_t address, const uint8_t *data, int len)
{
    /* driverlib's FlashProgram() takes a non-const buffer but only reads
     * from it. */
    if (FlashProgram((uint8_t *)data, address, len) != FAPI_STATUS_SUCCESS)
        return -1;
    while(FlashCheckFsmForReady() != FAPI_STATUS_FSM_READY)
                ;
    return 0;
}

void RAMFUNCTION hal_flash_unlock(void)
{
}

void RAMFUNCTION hal_flash_lock(void)
{
}


int RAMFUNCTION hal_flash_erase(uint32_t address, int len)
{
    int i = 0;
    while (len > 0) {
        if (FlashSectorErase(address + (WOLFBOOT_SECTOR_SIZE * i++)) !=
            FAPI_STATUS_SUCCESS)
            return -1;
        while(FlashCheckFsmForReady() != FAPI_STATUS_FSM_READY)
            ;

        if (len <= WOLFBOOT_SECTOR_SIZE)
            break;
        len -= WOLFBOOT_SECTOR_SIZE;
    }
    return 0;
}

void hal_init(void)
{
    /* Enable flash cache and prefetch. */
     ti_lib_vims_mode_set(VIMS_BASE, VIMS_MODE_ENABLED);
     ti_lib_vims_configure(VIMS_BASE, true, true);

     ti_lib_int_master_disable();

     ti_lib_prcm_power_domain_on(PRCM_DOMAIN_PERIPH);
     while((ti_lib_prcm_power_domain_status(PRCM_DOMAIN_PERIPH)
           != PRCM_DOMAIN_POWER_ON))
         ;

     ti_lib_prcm_power_domain_on(PRCM_DOMAIN_SERIAL);
     while ((ti_lib_prcm_power_domain_status(PRCM_DOMAIN_SERIAL)) != PRCM_DOMAIN_POWER_ON)
         ;

     ti_lib_prcm_peripheral_run_enable(PRCM_PERIPH_GPIO);
     ti_lib_prcm_load_set();
          while(!ti_lib_prcm_load_get())
              ;
     ti_lib_prcm_peripheral_run_enable(PRCM_PERIPH_UART0);

     ti_lib_prcm_load_set();
     while(!ti_lib_prcm_load_get())
         ;

     ti_lib_int_master_enable();

    clock_init();
}

void hal_prepare_boot(void)
{
}
